--- a/404.html
+++ b/404.html
@@ -68,7 +68,7 @@
     <h5>Sorry the page could not be found.</h5>
 </div>
 
-	<footer>&copy; Jessie Frazelle 2021
+	<footer>&copy; 邹慧刚 2021
 		<a class="pull-right" href="https://github.com/zouhuigang" target="_blank">@zouhuigang</a>
 	</footer>
 
