--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     
 </div>
 
-	<footer>&copy; Jessie Frazelle 2021
+	<footer>&copy; 邹慧刚 2021
 		<a class="pull-right" href="https://github.com/zouhuigang" target="_blank">@zouhuigang</a>
 	</footer>
 
